hphp/hack/test/typecheck/fc_enum_7.php.exp
File "fc_enum_7.php", line 10, characters 10-18:
Can't instantiate Bar (Typing[4002])
